# ukpostcodeio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  release.yml
Tests/: example.py  postcodetest.py
ukpostcodeio/: __init__.py  client.py  exceptions.py
